# lyss-story

./: .env.example  .gitignore  CLAUDE.md  README.md  mvp.md  pyproject.toml
backend/: config.py  deps.py  main.py  progress.py
backend/agents/: base.py  camera.py  character_arc.py  character_designer.py  character_reviewer.py  concept.py  consistency.py  director.py  outline_parser.py  outline_planner.py  planner.py  scene_consistency.py  scene_splitter.py  scene_writer.py  titler.py  world.py  world_builder.py  writer.py
backend/api/: chapters.py  control.py  llm_admin.py  public.py  stories.py
backend/graph/: chapter_graph.py  init_graph.py  nodes.py
backend/llm/: client.py  logger.py  model_registry.py
backend/memory/: chapter_extractor.py  context_builder.py  knowledge_graph.py  layered_memory.py  plot_dedup.py  world_book.py
backend/models/: camera.py  chapter.py  character.py  event.py  graph_state.py  llm_models.py  story_bible.py  world_state.py
backend/prompts/: camera.py  character_arc.py  character_designer.py  character_reviewer.py  concept.py  consistency.py  director.py  outline_parser.py  outline_planner.py  planner.py  scene_consistency.py  scene_splitter.py  scene_writer.py  titler.py  world.py  world_builder.py  writer.py
backend/services/: regeneration.py  task_registry.py
backend/storage/: json_store.py  sqlite_store.py  vector_store.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChapterList.tsx  (+14 more)
reader/: package.json  pnpm-lock.yaml
(+63 files in other folders)
